fix: add overflow scroll to #root

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -37,6 +37,7 @@ body,
 #root {
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .container {
